
 -Deutsch
    - Update Bootsrap Icons auf 1.11.2
    - Das AutoPilot Protokoll konnte nicht gelöscht bzw. geleert werden. Fehler wurde behoben. 
    - Es werden ab sofort relevante Systemereignisse, wie z.B. das Ergebnis eines ausgeführten AutoPilot Scripts, das Erweitern bzw. Beschränken der App-Berechtigung oder der Installationsstatus der UDEV-Regel an das DSM Protokoll Center übergeben. 
    - Änderungen in der Arbeits- und Funktionsweise von AutoPilot vorgenommen, welche die Systemsicherheit stark verbessern. Dies erfordert jedoch manuelle Anpassungen des Benutzers, da hierbei u.a. der Speicherort eines auszuführenden Shell-Scriptdatei neu definiert werden muss. 

 -English
    - Update Bootsrap Icons to 1.11.2
    - The AutoPilot log could not be deleted or emptied. Bug has been fixed.
    - From now on, relevant system events, such as the result of an executed AutoPilot script, the extension or restriction of app authorization or the installation status of the UDEV rule, are transferred to the DSM Protocol Center.
    - Changes have been made to the way AutoPilot works and functions, which greatly improve system security. However, this requires manual adjustments by the user because, among other things, the storage location of a shell script file to be executed must be redefined.


Version 1.0-300 vom 24.09.2023

 -Deutsch
    - Update Bootstrap Framework auf 5.3.2
    - Update Bootstrap JavaScript auf 5.3.2
    - Update Bootsrap Icons auf 1.11.1
    - Wurde der Mountpoint eines externen Datenträgers nach dem Auswerfen nicht korrekt entfernt, hat AutoPilot diesen trotzdem noch angezeigt. Fehler wurde behoben.
    - Kleinere Fehlerkorrekturen vorgenommen. Danke an @luddinho aus dem GitHub Universum
    - Designänderungen und Detailverbesserungen vorgenommen.
 

 -English
    - Update Bootstrap Framework to 5.3.2
    - Update Bootstrap JavaScript to 5.3.2
    - Update Bootsrap Icons auf 1.11.1